--- a/assets/js/index.html
+++ b/assets/js/index.html
@@ -23,11 +23,11 @@
 			<img src="../../pics/void/11.jpg">
 			<img src="../../pics/void/12.jpg">
 			<img src="../../pics/void/13.jpg">
-			<img src="../../pics/void/14.gif">
+			<img src="../..pics/void/14.gif">
 			<img src="../../pics/void/15.jpg">
 		</div>
 		<div class="kontrol">
-			<audio src="../../4212/party.mp3" autoplay="" loop="" preload="auto" controls="" class="lol"></audio>
+			<audio src="../../4212/party.mp3" autoplay="" loop="" preload="auto" controls="" class="lol"../../audio>
 		</div>
 	</div>
 
