--- a/batman/index.html
+++ b/batman/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>void(){}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="../assets/de4/simple.css/void.css">
+	<link rel="stylesheet" type="text/css" href="../assets/style/simple.css/void.css">
 </head>
 <body>
 
@@ -27,7 +27,7 @@
 			<img src="../pics/void/15.jpg">
 		</div>
 		<div class="kontrol">
-			<audio src="party.mp3" autoplay="" loop="" preload="auto" controls="" class="lol"></audio>
+			<audio src="../4212/party.mp3" autoplay="" loop="" preload="auto" controls="" class="lol"></audio>
 		</div>
 	</div>
 
