--- a/pics/void/index.html
+++ b/pics/void/index.html
@@ -3,28 +3,28 @@
 <head>
 	<title>void(){}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="../../assets/de4/simple.css/void.css">
+	<link rel="stylesheet" type="text/css" href="../../assets/style/simple.css/void.css">
 </head>
 <body>
 
 	<div id="gallery">
 		<div class="image">
-			<img src="0.jpg">
-			<img src="1.jpg">
-			<img src="2.jpg">
-			<img src="3.jpg">
-			<img src="4.jpg">
-			<img src="5.jpg">
-			<img src="6.jpg">
-			<img src="7.jpg">
-			<img src="8.jpg">
-			<img src="9.jpg">
-			<img src="10.jpg">
-			<img src="11.jpg">
-			<img src="12.jpg">
-			<img src="13.jpg">
-			<img src="14.gif">
-			<img src="15.jpg">
+			<img src="../../pics/void/0.jpg">
+			<img src="../../pics/void/1.jpg">
+			<img src="../../pics/void/2.jpg">
+			<img src="../../pics/void/3.jpg">
+			<img src="../../pics/void/4.jpg">
+			<img src="../../pics/void/5.jpg">
+			<img src="../../pics/void/6.jpg">
+			<img src="../../pics/void/7.jpg">
+			<img src="../../pics/void/8.jpg">
+			<img src="../../pics/void/9.jpg">
+			<img src="../../pics/void/10.jpg">
+			<img src="../../pics/void/11.jpg">
+			<img src="../../pics/void/12.jpg">
+			<img src="../../pics/void/13.jpg">
+			<img src="../../pics/void/14.gif">
+			<img src="../../pics/void/15.jpg">
 		</div>
 		<div class="kontrol">
 			<audio src="../../4212/party.mp3" autoplay="" loop="" preload="auto" controls="" class="lol"></audio>
